エラー画像修正

--- a/public/404.html
+++ b/public/404.html
@@ -140,7 +140,7 @@
       <div class="logo"></div>
     </header>
     <html id="container">
-    <img src="/assets/error.png" class="top-image">
+    <img src="/img/error.png" class="top-image">
     <article>
       <h1>ご指定のページが見つかりません</h1>
       <p>ご指定のページは削除されたか、移動した可能性がございます</p>
