--- a/public/422.html
+++ b/public/422.html
@@ -140,7 +140,7 @@
         <div class="logo"></div>
       </header>
       <html id="container">
-      <img src="/assets/error.png" class="top-image">
+      <img src="/img/error.png" class="top-image">
       <article>
         <h1>ページが表示できません</h1>
         <p>ご不便をおかけし申し訳ありません。</p>
